--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,6 +6,19 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  font-family: verdana;
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+
+p {
+  font-family: verdana;
+  font-size: 21px;
+  color: gray;
+}
+
 html {
   background-color: black;
   text-align: center;
@@ -14,4 +27,11 @@ html {
 .download a {
   color: aquamarine;
   font-size: 16px;
+}
+
+.copyright {
+  font-family: verdana;
+  font-size: 21px;
+  color: gray;
+  text-align: right;
 }
